[package]
name = "rubx"
description = "Rubx (Rust Basic Toolbox) is a library for command programs that features a toolbox with a series of basic functionalities."
repository = "https://github.com/emuvi/rubx/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.1"
edition = "2021"

[dependencies]
num_cpus = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = "0.4"
rand = "0.8"
